Change naming of PORT in fly.toml